--- a/Views/Admin/EditEmployee.cshtml
+++ b/Views/Admin/EditEmployee.cshtml
@@ -58,10 +58,16 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="password" class="form-control" name="Password" minlength="6" />
+                                        <input type="password" class="form-control" name="Password" minlength="8" />
                                         <label><i class="fa fa-lock text-primary me-2"></i>New Password (Optional)</label>
                                     </div>
-                                    <small class="text-muted">Leave blank to keep current password</small>
+                                    <small class="text-muted d-block mt-1">
+                                        Leave blank to keep current password<br />
+                                        <strong>If changing, password must contain:</strong><br />
+                                        • At least 8 characters • One uppercase letter<br />
+                                        • One lowercase letter • One number<br />
+                                        • One special character (@@$!%*?&# etc.)
+                                    </small>
                                 </div>
                             </div>
                         </div>
