--- a/Views/Auth/CustomerRegister.cshtml
+++ b/Views/Auth/CustomerRegister.cshtml
@@ -165,13 +165,21 @@
                                 <div class="col-12">
                                     <div class="input-group">
                                         <input type="password" class="form-control border-0"
-                                               placeholder="Password (min 6 characters)" name="Password"
-                                               id="RegisterPassword" required minlength="6" style="height: 55px;">
+                                               placeholder="Password" name="Password"
+                                               id="RegisterPassword" required minlength="8" style="height: 55px;">
 
                                         <span class="input-group-text bg-white" style="cursor: pointer;" id="toggleRegisterPassword">
                                             <i class="fa fa-eye" id="toggleRegisterPasswordIcon"></i>
                                         </span>
                                     </div>
+                                    <small class="text-white-50 d-block mt-2">
+                                        <strong>Password must contain:</strong><br />
+                                        • At least 8 characters<br />
+                                        • One uppercase letter (A-Z)<br />
+                                        • One lowercase letter (a-z)<br />
+                                        • One number (0-9)<br />
+                                        • One special character (@@$!%*?&# etc.)
+                                    </small>
                                 </div>
 
                                 <div class="col-12">
@@ -258,7 +266,6 @@
             toggleRegConfirmPasswordIcon.classList.toggle("fa-eye-slash");
         });
     </script>
-
 
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
