--- a/Views/Auth/ResetPassword.cshtml
+++ b/Views/Auth/ResetPassword.cshtml
@@ -90,10 +90,10 @@
                                 <div class="col-12">
                                     <div class="input-group">
                                         <input type="password" class="form-control border-0"
-                                               placeholder="New Password (min 6 characters)"
+                                               placeholder="New Password"
                                                name="NewPassword"
                                                id="ResetNewPassword"
-                                               required minlength="6"
+                                               required minlength="8"
                                                style="height: 55px;">
 
                                         <span class="input-group-text bg-white"
@@ -102,6 +102,14 @@
                                             <i class="fa fa-eye" id="toggleResetNewPasswordIcon"></i>
                                         </span>
                                     </div>
+                                    <small class="text-white-50 d-block mt-2 text-start">
+                                        <strong>Password must contain:</strong><br />
+                                        • At least 8 characters<br />
+                                        • One uppercase letter (A-Z)<br />
+                                        • One lowercase letter (a-z)<br />
+                                        • One number (0-9)<br />
+                                        • One special character (@@$!%*?&# etc.)
+                                    </small>
                                 </div>
 
                                 <div class="col-12">
@@ -187,4 +195,4 @@
 
 </body>
 
-</html>
+</html></html>
